ported

  - HTML and XHTML filter: It is now possible to select specifically which
meta content is to be translated

  - New Project Files window. The keyboard can be used, and the Editor font
can be applied or not with a new option in Options/Font.

----------------------------------------------------------------------
1.8.1 vs. 1.8.0 update 2


   8 Enhancements
   1 Bugfixe
----------------------------------------------------------------------
1.8.1 

  Implemented requests:

  - OpenDoc: Allow to translate or not Bookmark references  
  http://sourceforge.net/support/tracker.php?aid=2018244 

  - Do not take user to first segment on project reload  
  http://sourceforge.net/support/tracker.php?aid=1906198 

  Other enhancements:

  - Revised manual

  - The xml:lang attribute can be translated with the HTML filter
  
  - Slovak localisation updated to 1.8 (UI)
  - Dutch localisation updated to 1.8 (UI, readme)
  - Czech localisation updated to 1.8 (UI, readme)
  - Serbo-Croatian localisation updated to 1.8 (UI, readme)
  
  Bug fixes:
  - Extra space in each segment in the German localization
  http://sourceforge.net/support/tracker.php?aid=2169447  

----------------------------------------------------------------------
 OmegaT 1.8.0 update 2 Changes
----------------------------------------------------------------------
1.8.0 update 2 vs. 1.8.0 update 1


   3 Enhancements
   4 Bugfixes
----------------------------------------------------------------------
1.8.0 update 2

  Other enhancements:

  - Spellchecking dialogs now have a title
  - Non-breaking spaces are trimmed from translatable text
  - Catalan localisation updated to 1.8 (UI)

  Bug fixes:
  
  - Spellchecking dialogs not dismissable with [esc]
  http://sourceforge.net/support/tracker.php?aid=1815506
  - Wrong Import file dialog title
  http://sourceforge.net/support/tracker.php?aid=1940081 
  - Hunspell not working on Linux 64-bit
  - Non-ascii char badly handled in hunspell lib loading on OS-X